Resolves: tdf#92015 Handle malused *:rfc-language-tag ODF violation

... and don't let it overwrite existing fo:* tags with less
information.

Change-Id: I63c223f6bccd682e4173449ddc76c36e8fac6c35